# Base-1

./: .gitignore  AI_CONTEXT_BASE1.md  AI_TEST_STYLE_GUIDE.md  LICENSE.md  README.md  app.py  find_zeta_zero.py  pyproject.toml  requirements.txt
constants/: bernoulli.py  pi.py
core/: algorithms.py  collatz_lab.py  complex_mode.py  continued_fraction.py  galois.py  gosper.py  polynomial.py  riemann_siegel.py  stream.py  transcendental.py  unary.py
dashboard/: app.py  style.css
dashboard/modules/: collatz.py  comparator.py  mixing.py
modules/: base.py  collatz.py  comparator.py  mixing.py  zeta.py
src/: algorithms.py  collatz_lab.py  complex_mode.py  continued_fraction.py  galois.py  gosper.py  polynomial.py  science_mode.py  transcendental.py  unary.py
test/: test_algebraic.py  test_bernoulli.py  test_cartography.py  test_complex_euclid.py  test_complex_exponential.py  test_complex_mode.py  test_continued_fraction.py  test_debug_riemann_lab.py  test_galois.py  test_gosper_arithmatic.py  test_pi.py  test_polynomial.py  test_rational.py  test_riemann_siegel.py  test_science_equivilence.py  test_science_mode.py  test_trace.py  test_transcendental.py  test_unary.py
